--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "html-webpack-plugin": "^5.6.0",
         "laravel-vite-plugin": "^1.0",
         "mini-css-extract-plugin": "^2.9.0",
+        "nodemon": "^3.1.7",
         "postcss": "^8.4.39",
         "postcss-loader": "^8.1.1",
         "prettier": "^3.3.2",
@@ -30,9 +31,20 @@
         "webpack-manifest-plugin": "^5.0.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@fortawesome/free-brands-svg-icons": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@hookform/error-message": "^2.0.1",
         "@hookform/resolvers": "^3.9.0",
+        "@mui/icons-material": "^6.1.3",
+        "@mui/material": "^6.1.3",
+        "@tabler/core": "^1.0.0-beta21",
+        "@tabler/icons-react": "^3.19.0",
         "date-fns": "^3.6.0",
+        "fontawesome": "^5.6.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.52.1",
