--- a/supervisor/supervisor-npm.conf
+++ b/supervisor/supervisor-npm.conf
@@ -1,5 +1,5 @@
 [program:npm]
-command=npm run dev
+command=npm start
 directory=/var/www/html
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
