--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
         "@hookform/resolvers": "^3.9.0",
         "@mui/icons-material": "^6.1.3",
         "@mui/material": "^6.1.3",
+        "@mui/x-charts": "^7.22.2",
         "@tabler/core": "^1.0.0-beta21",
         "@tabler/icons-react": "^3.19.0",
+        "@tensorflow/tfjs": "^4.22.0",
         "date-fns": "^3.6.0",
         "fontawesome": "^5.6.3",
         "react": "^18.3.1",
