--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     laravel:
-        image: admin_laravel
+        image: laravel
         build:
             context: .
             target: development
@@ -9,12 +9,6 @@ services:
             - ./:/var/www/html
         ports:
             - "2303:80"
-        environment:
-            - DB_HOST=cliff_database
-            - DB_PORT=3306
-            - DB_DATABASE=cliff-database
-            - DB_USERNAME=root
-            - DB_PASSWORD=root
         networks:
             - cliff-network
 
