--- a/.env
+++ b/.env
@@ -26,25 +26,27 @@ DB_DATABASE=cliff-database
 DB_USERNAME=root
 DB_PASSWORD=root
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
+SESSION_DRIVER=redis
+SESSION_LIFETIME=525600
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
+SESSION_EXPIRE_ON_CLOSE=true
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_CLIENT=predis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=0
 
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
