--- a/docker-compose-shared.yml
+++ b/docker-compose-shared.yml
@@ -20,6 +20,15 @@ services:
     networks:
       - cliff-network
 
+  mailhog:
+    image: mailhog/mailhog
+    container_name: mailhog
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+    networks:
+      - cliff-network
+
 volumes:
   mysql-data:
 
